# ENSAM-LICENSE-PLATE-DETECTION

./: LICENSE  README.md  install.bat  install.sh  main.py  pyproject.toml  requirements.txt  verify_install.py
src/lpr/camera/: camera.py
src/lpr/detection/: detection.py
src/lpr/ocr/: ocr.py
src/lpr/utils/: text_utils.py
src/lpr_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
