[project]
name = "lpr-system"
version = "0.1.0"
description = "Real-time Moroccan license plate recognition using YOLOv8 and EasyOCR"
requires-python = ">=3.9"

# Flexible lower-bound constraints avoid pip resolver conflicts.
# Torch is intentionally omitted here — install it separately via install.bat / install.sh
# because it requires PyTorch's own package index (see instructions below).
dependencies = [
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "ultralytics>=8.0.0",
    "easyocr>=1.7.0",
    "numpy>=1.23.0,<2.0.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
